@@ -70,7 +70,7 @@ public:
     int putByteVector(ByteVector* bv, int start, int count);
     void flush();
     void internalFlush();
-    int dup(int target);
+    File* getFile();
 
 protected:
     enum {
