@@ -71,7 +71,7 @@ public:
     bool hasSetPosition() const;
     Object position() const;
     bool setPosition(int position);
-    int dup(int target);
+    File* getFile();
 
 
 private:
