@@ -69,7 +69,7 @@ public:
     int putByteVector(ByteVector* bv, int start = 0);
     int putByteVector(ByteVector* bv, int start, int count);
     void flush();
-    int dup(int target);
+    File* getFile();
 
 private:
 
