@@ -1,5 +1,9 @@
 2009-04-09  higepon  <higepon@users.sourceforge.jp>
 
+        * BufferedFileBinaryInputPort.cpp : Changed fd_ => File Class.
+
+        * FileBinaryInputOutputPort.cpp: Changed OutputPort to use File Class.
+
         * OSCompat.cpp (lseekFd): Added.
 
         * main.cpp (main): Use getCommandLine and getopt_longU.
